~ hotfix: nav overlap regression fix

--- a/src/assets/toolkit/styles/6-components/_components.navigation.global.scss
+++ b/src/assets/toolkit/styles/6-components/_components.navigation.global.scss
@@ -44,6 +44,7 @@
     left: 0;
     right: 0;
     z-index: 100;
+    height: $default-spacing * 2;
 
     .horisontal-links {
         @include clearfix();
